# quick-crop

./: .gitignore  Cargo.toml  README.md
src/: main.rs  types.rs
